--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/83aa8d8bfe.js" crossorigin="anonymous"></script>
   <!-- main css -->
   <!-- ===FONTS=== -->
   <!-- ===JS LINKS=== -->
@@ -28,40 +30,41 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#welcome-area">Ramen Place</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#about-us-area">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a href="#menu-area" class="nav-link">Menu</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Photo Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Hours & Location</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Testimonials</a>
-          </li>
-          <li class="nov-item">
-            <a href="#" class="nav-link">Connect With Us</a>
-          </li>
-          </ul>
-          </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#welcome-area">Ramen Place</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#about-us-area">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a href="#menu-area" class="nav-link">Menu</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Photo Gallery</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Hours & Location</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Testimonials</a>
+        </li>
+        <li class="nov-item">
+          <a href="#" class="nav-link">Connect With Us</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <header>
       <div id="welcome-area">
         <div class="row">
-          <div class="col-12">
+          <div class="col-lg-12">
             <div class="jumbotron">
               <h1 class="display-4">Ramen Place</h1>
               <p class="lead">Serving Authentic Eastern Cuisine Since 2001</p>
@@ -71,27 +74,29 @@
       </div>
     </header>
     <main>
-      <div class="row">
-        <div class="col-12">
-          <div id="about-us-area">
+      <div id="about-us-area">
+        <div class="row">
+          <div class="col-lg-12">
             <div class="card">
               <h5 class="card-header">About Us</h5>
               <div class="card-body">
                 <h5 class="card-title">Authentic Cuisine</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                 <h5 class="card-title">Dedicated to Quality</h5>
-                <p class="card-text">Molestiae fugit vero. Ipsum nemo suscipit ut sunt harum molestiae et aperiam error. Molestias voluptatem molestias dignissimos et vel. Sunt aut neque esse ipsam voluptas.</p>
+                <p class="card-text">Molestiae fugit vero. Ipsum nemo suscipit ut sunt harum molestiae et aperiam error.
+                  Molestias voluptatem molestias dignissimos et vel. Sunt aut neque esse ipsam voluptas.</p>
                 <h5 class="card-title">Helping The Community</h5>
-                <p class="card-text">Molestiae fugit vero. Ipsum nemo suscipit ut sunt harum molestiae et aperiam error. Molestias voluptatem molestias dignissimos et vel. Sunt aut neque esse ipsam voluptas.</p>
+                <p class="card-text">Molestiae fugit vero. Ipsum nemo suscipit ut sunt harum molestiae et aperiam error.
+                  Molestias voluptatem molestias dignissimos et vel. Sunt aut neque esse ipsam voluptas.</p>
 
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <div id="menu-area">
+      <div id="menu-area">
+        <div class="row">
+          <div class="col-lg-12">
             <br>
             <h5 id="menu-heading">MENU</h5>
             <br>
@@ -123,28 +128,167 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <div id="photo-gallery-area">
+      <div id="photo-gallery-area">
+        <div class="row">
+          <div class="col-lg-12">
             <div class="jumbotron">
               <div class="row">
-                <div class="col-4">
+                <div class="col-lg-4">
 
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
 
                 </div>
-                <div class="col-4">
-                  
+                <div class="col-lg-4">
+
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div id="hours-location-area">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <h5 class="card-header">Hours of Operation</h5>
+              <div class="card-body">
+                <table>
+                  <tr>
+                    <th>Day Of The Week</th>
+                    <th>Time Open</th>
+                    <th>Time Closed</th>
+                  </tr>
+                  <tr>
+                    <td>Sunday</td>
+                    <td>9:00 A.M.</td>
+                    <td>12:00 P.M.</td>
+                  </tr>
+                  <tr>
+                    <td>Monday</td>
+                    <td>12:00 P.M.</td>
+                    <td>9:00 P.M.</td>
+                  </tr>
+                  <tr>
+                    <td>Tuesday</td>
+                    <td>12:00 P.M.</td>
+                    <td>9:00 P.M.</td>
+                  </tr>
+                  <tr>
+                    <td>Wednesday</td>
+                    <td>CLOSED</td>
+                    <td>CLOSED</td>
+                  </tr>
+                  <tr>
+                    <td>Thursday</td>
+                    <td>12:00 P.M.</td>
+                    <td>9:00 P.M.</td>
+                  </tr>
+                  <tr>
+                    <td>Friday</td>
+                    <td>12:00 P.M.</td>
+                    <td>10:00 P.M.</td>
+                  <tr>
+                    <td>Saturday</td>
+                    <td>CLOSED</td>
+                    <td>CLOSED</td>
+                  </tr>
+                  </tr>
+
+                </table>
+
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <h5 class="card-header">Come Visit Us</h5>
+              <div class="card-body">
+                <h5 class="card-title">Address:</h5>
+                <p class="card-text">40741 Verner Inlet <br> West Gustave IN <br> 43919-8846</p>
+                <h5 class="card-title">Phone Number:</h5>
+                <p class="card-text">(209) 245-6469</p>
+                <h5 class="card-title">Restaurant Manager:</h5>
+                <img src="assets/images/manager.png" alt="Barrett Abbott" id="manager-img">
+                <p class="card-text">Barrett Abbott</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="testimonials-area">
+        <div class="row">
+          <div class="col-lg-12">
+            <h5 id="testimonials-heading">Testimonials</h5>
+            <br>
+            <div id="testimonials-carousel" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <h3>My family loves Ramen Place. We come to have a family dinner once a week.</h3>
+                  <p>~Blaise Pfeffer</p>
+                </div>
+                <div class="carousel-item">
+                  <h3>My mother and I can't say enough about the staff and service, will definitely be coming back.</h3>
+                  <p> ~Dr. Margarita Rippin</p>
+                </div>
+                <div class="carousel-item">
+                  <h3>The food tastes so good, it's easy to forget that your in the states.</h3>
+                  <p>~Carrie Aufderhar</p>
+                </div>
+                <div class="carousel-item">
+                  <h3>After a hard day at work on Friday, Ramen Place's happy hour is the perfect way for me to unwind
+                    with my co-workers.</h3>
+                    <p>~Rachelle Pagac</p>
+                </div>
+                <div class="carousel-item">
+                  <h3>The Sunday brunch is absolutely fantastic.</h3>
+                  <p>~Webster Shields</p>
+                </div>
+                <div class="carousel-item">
+                  <h3>A dining experience that is as entertaining as it is immersive.</h3>
+                  <p>~Iva Lehner</p>
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
-
+      <br>
+      <div id="connect-area">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="card">
+              <h5 class="card-header">Find Us On Social Media</h5>
+              <div class="card-body">
+                <a href="#" id="facebook-icon"><i class="fab fa-facebook fa-5x"></i></a>
+                <a href="#" id="twitter-icon"><i class="fab fa-twitter-square fa-5x"></i></a>
+                <a href="#" id="yelp-icon"><i class="fab fa-yelp fa-5x"></i></a>
+                <a href="#" id="instagram-icon"><i class="fab fa-instagram fa-5x"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card">
+              <h5 class="card-header">Featured</h5>
+              <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
