--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/83aa8d8bfe.js" crossorigin="anonymous"></script>
   <!-- main css -->
+  <link rel="stylesheet" href="assets/css/main.css">
   <!-- ===FONTS=== -->
+  <link href="https://fonts.googleapis.com/css?family=Martel|Permanent+Marker&display=swap" rel="stylesheet">
   <!-- ===JS LINKS=== -->
   <!-- jquery -->
   <script defer src="https://code.jquery.com/jquery-3.4.1.js"
@@ -30,8 +32,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#welcome-area">Ramen Place</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+    <a class="navbar-brand" href="#welcome-area"><i class="fas fa-home"></i> Ramen Place</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -46,28 +48,31 @@
           <a href="#menu-area" class="nav-link">Menu</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Photo Gallery</a>
+          <a href="#photo-gallery-area" class="nav-link">Photo Gallery</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Hours & Location</a>
+          <a href="#hours-location-area" class="nav-link">Hours & Location</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Testimonials</a>
+          <a href="#testimonials-area" class="nav-link">Testimonials</a>
         </li>
         <li class="nov-item">
-          <a href="#" class="nav-link">Connect With Us</a>
+          <a href="#connect-area" class="nav-link">Connect With Us</a>
         </li>
       </ul>
     </div>
   </nav>
+  <br>
   <div class="container">
     <header>
       <div id="welcome-area">
         <div class="row">
           <div class="col-lg-12">
             <div class="jumbotron">
+              <img id="logo-image" src="assets/images/Red and Black Japanese Restaurant Logo.png" alt="ramen place logo">
+              <br>
               <h1 class="display-4">Ramen Place</h1>
-              <p class="lead">Serving Authentic Eastern Cuisine Since 2001</p>
+              <p class="lead">Serving Authentic Japanese Cuisine Since 2001</p>
             </div>
           </div>
         </div>
@@ -78,7 +83,7 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="card">
-              <h5 class="card-header">About Us</h5>
+              <h5 class="card-header section-card-header">About Us</h5>
               <div class="card-body">
                 <h5 class="card-title">Authentic Cuisine</h5>
                 <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -98,30 +103,30 @@
         <div class="row">
           <div class="col-lg-12">
             <br>
-            <h5 id="menu-heading">MENU</h5>
+            <h5 class="section-heading" id="menu-heading">MENU</h5>
             <br>
             <div class="card">
-              <h5 class="card-header">Appetizers</h5>
+              <h5 class="card-header menu-section">Appetizers</h5>
               <div class="card-body">
               </div>
             </div>
             <div class="card">
-              <h5 class="card-header">Entrees</h5>
+              <h5 class="card-header menu-section">Entrees</h5>
               <div class="card-body">
               </div>
             </div>
             <div class="card">
-              <h5 class="card-header">Deserts</h5>
+              <h5 class="card-header menu-section">Deserts</h5>
               <div class="card-body">
               </div>
             </div>
             <div class="card">
-              <h5 class="card-header">Specials</h5>
+              <h5 class="card-header menu-section">Specials</h5>
               <div class="card-body">
               </div>
             </div>
             <div class="card">
-              <h5 class="card-header">Beverages</h5>
+              <h5 class="card-header menu-section">Beverages</h5>
               <div class="card-body">
               </div>
             </div>
@@ -131,6 +136,8 @@
       <div id="photo-gallery-area">
         <div class="row">
           <div class="col-lg-12">
+            <br>
+            <h5 class="section-heading" id="gallery-heading">Photo Gallery</h5>
             <div class="jumbotron">
               <div class="row">
                 <div class="col-lg-4">
@@ -151,7 +158,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card">
-              <h5 class="card-header">Hours of Operation</h5>
+              <h5 class="card-header section-card-header">Hours of Operation</h5>
               <div class="card-body">
                 <table>
                   <tr>
@@ -202,7 +209,7 @@
           </div>
           <div class="col-lg-6">
             <div class="card">
-              <h5 class="card-header">Come Visit Us</h5>
+              <h5 class="card-header section-card-header">Come Visit Us</h5>
               <div class="card-body">
                 <h5 class="card-title">Address:</h5>
                 <p class="card-text">40741 Verner Inlet <br> West Gustave IN <br> 43919-8846</p>
@@ -219,45 +226,46 @@
       <div id="testimonials-area">
         <div class="row">
           <div class="col-lg-12">
-            <h5 id="testimonials-heading">Testimonials</h5>
+            <br>
+              <h5 class="section-heading" id="testimonials-heading">Testimonials</h5>
             <br>
             <div id="testimonials-carousel" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <h3>My family loves Ramen Place. We come to have a family dinner once a week.</h3>
+                  <h4>My family loves Ramen Place. We come to have a family dinner once a week.</h4>
                   <p>~Blaise Pfeffer</p>
                 </div>
                 <div class="carousel-item">
-                  <h3>My mother and I can't say enough about the staff and service, will definitely be coming back.</h3>
+                  <h4>My mother and I can't say enough about the staff and service, will definitely be coming back.</h4>
                   <p> ~Dr. Margarita Rippin</p>
                 </div>
                 <div class="carousel-item">
-                  <h3>The food tastes so good, it's easy to forget that your in the states.</h3>
+                  <h4>The food tastes so good, it's easy to forget that your in the states.</h4>
                   <p>~Carrie Aufderhar</p>
                 </div>
                 <div class="carousel-item">
-                  <h3>After a hard day at work on Friday, Ramen Place's happy hour is the perfect way for me to unwind
-                    with my co-workers.</h3>
-                    <p>~Rachelle Pagac</p>
+                  <h4>On Friday, Ramen Place's happy hour is the perfect way for me to unwind.</h4>
+                  <p>~Rachelle Pagac</p>
                 </div>
                 <div class="carousel-item">
-                  <h3>The Sunday brunch is absolutely fantastic.</h3>
+                  <h4>The Sunday brunch is absolutely fantastic.</h4>
                   <p>~Webster Shields</p>
                 </div>
                 <div class="carousel-item">
-                  <h3>A dining experience that is as entertaining as it is immersive.</h3>
+                  <h4>A dining experience that is as entertaining as it is immersive.</h4>
                   <p>~Iva Lehner</p>
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#testimonials-carousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#testimonials-carousel" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
+            <br>
           </div>
         </div>
       </div>
@@ -268,28 +276,85 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="card">
-              <h5 class="card-header">Find Us On Social Media</h5>
+              <h5 class="card-header section-card-header">Find Us On Social Media</h5>
               <div class="card-body">
-                <a href="#" id="facebook-icon"><i class="fab fa-facebook fa-5x"></i></a>
-                <a href="#" id="twitter-icon"><i class="fab fa-twitter-square fa-5x"></i></a>
-                <a href="#" id="yelp-icon"><i class="fab fa-yelp fa-5x"></i></a>
-                <a href="#" id="instagram-icon"><i class="fab fa-instagram fa-5x"></i></a>
+                <a href="#" class="social-icons" id="facebook-icon"><i class="fab fa-facebook fa-5x"></i></a>
+                <a href="#" class="social-icons" id="twitter-icon"><i class="fab fa-twitter-square fa-5x"></i></a>
+                <a href="#" class="social-icons" id="yelp-icon"><i class="fab fa-yelp fa-5x"></i></a>
+                <a href="#" class="social-icons" id="instagram-icon"><i class="fab fa-instagram fa-5x"></i></a>
               </div>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="card">
-              <h5 class="card-header">Featured</h5>
+              <h5 class="card-header section-card-header">Contact Us</h5>
               <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <form action="#" id="contact-form">
+                  <div class="form-group">
+                    <label for="customer-name">Name:</label>
+                    <input type="text" class="form-control" id="customer-name" aria-describedby="nameHelp"
+                      placeholder="John Doe" required>
+                    <small id="nameHelp" class="form-text text-muted">Please enter your name.</small>
+                  </div>
+                  <div class="form-group">
+                    <label for="customer-email">E-mail:</label>
+                    <input type="text" class="form-control" id="customer-email" aria-describedby="emailHelp"
+                      placeholder="jdoe@gmail.com" required>
+                    <small id="emailHelp" class="form-text text-muted">Please enter your E-mail.</small>
+                  </div>
+                  <div class="form-group">
+                    <label for="contact-reason">Reason for reaching out:</label>
+                    <select class="form-control" id="contact-reason">
+                      <option value="Event Scheduling/Catering">Event Scheduling/Catering</option>
+                      <option value="General Question(s)" selected>General Question(s)</option>
+                      <option value="Make A Complaint">Make A Complaint</option>
+                      <option value="Media/Press Request">Media/Press Request</option>
+                      <option value="Other">Other</option>
+                    </select>
+                    <small id="reasonHelp" class="form-text text-muted">Please tell us why your reaching out
+                      today.</small>
+                  </div>
+                  <div class="form-group">
+                    <label for="customer-message">Message:</label>
+                    <textarea type="text" class="form-control" id="customer-message" aria-describedby="messageHelp"
+                      placeholder="Enter your message here." required></textarea>
+                    <small id="messageHelp" class="form-text text-muted">Please enter your message in the text
+                      area.</small>
+                  </div>
+                  <div class="form-group">
+                    <label>Would you like to sign up for E-mail notifications from Ramen Place about
+                      special offers, reservation information and more?</label>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="sign-up" id="email-sign-up-1"
+                        value="You opted in to receive E-mail notifications" checked>
+                      <label class="form-check-label" for="email-sign-up-1">
+                        Yes, please add me to the mailing list.
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="sign-up" id="email-sign-up-2"
+                        value="You opted not to receive E-mail notifications">
+                      <label class="form-check-label" for="email-sign-up-2">
+                        No thanks, maybe next time.
+                      </label>
+                    </div>
+                    <small id="signUpHelp" class="form-text text-muted">Please note, we will never share your information
+                      with anyone. For more information on how Ramen Place makes use of your information, please feel
+                      free to refer to our <a href="#">Privacy Policy</a>.</small>
+                  </div>
+                  <button type="submit" class="btn btn-success" id="submit-btn">Submit</button>
+                  <button type="reset" class="btn btn-danger">Reset Form</button>
+                </form>
               </div>
             </div>
           </div>
         </div>
       </div>
     </footer>
+  </div>
+  <br>
+  <div id="copyright">
+    <h6 id="copyright-text">&copy; Copyright 2020 Ramen Place</h6>
   </div>
 </body>
 
