started adding menu items

--- a/index.html
+++ b/index.html
@@ -104,15 +104,39 @@
           <div class="col-lg-12">
             <br>
             <h5 class="section-heading" id="menu-heading">MENU</h5>
+            <!-- ===FOR FUTURE REFERENCE=== -->
+            <!-- https://matcha-jp.com/en/2593 -->
             <br>
             <div class="card">
               <h5 class="card-header menu-section">Appetizers</h5>
               <div class="card-body">
+                <dl>
+                  <dt>Sushi......$5.00</dt>
+                  <dd>vinegared rice with a piece of raw fish or shellfish on top. Served with soy sauce and wasabi.</dd>
+                  <dt>Sashimi......$5.00</dt>
+                  <dd>Raw fish sliced into delicious easy-to-eat pieces. Served with soy sauce, wasabi or ginger.</dd>
+                  <dt>Yakitori......$10.00</dt>
+                  <dd>Grilled chicken or vegetable skewers, lightly seasoned with salt.</dd>
+                </dl>
               </div>
             </div>
             <div class="card">
               <h5 class="card-header menu-section">Entrees</h5>
               <div class="card-body">
+                <dl>
+                  <dt>Sukiyaki......$15.00</dt>
+                  <dd></dd>
+                  <dt>Onigiri......$10.00</dt>
+                  <dd></dd>
+                  <dt>Udon......$8.00</dt>
+                  <dd></dd>
+                  <dt>Soba......$5.00</dt>
+                  <dd></dd>
+                  <dt>Tempura......$10.00</dt>
+                  <dd></dd>
+                  <dt>Oden......$8.00</dt>
+                  <dd></dd>
+                </dl>
               </div>
             </div>
             <div class="card">
