added sticky nav and smooth scrolling

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
   <!-- main -->
+  <script defer src="assets/javascript/main.js"></script>
 
   <title>Ramen Place</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top">
     <a class="navbar-brand" href="#welcome-area"><i class="fas fa-home"></i> Ramen Place</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> Menu
       <span class="navbar-toggler-icon"></span>
     </button>
 
