--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     </div>
                     <small id="signUpHelp" class="form-text text-muted">Please note, we will never share your information
                       with anyone. For more information on how Ramen Place makes use of your information, please feel
-                      free to refer to our <a href="#">Privacy Policy</a>.</small>
+                      free to refer to our <a href="#" id="policy-link">Privacy Policy</a>.</small>
                   </div>
                   <button type="submit" class="btn btn-success" id="submit-btn">Submit</button>
                   <button type="reset" class="btn btn-danger">Reset Form</button>
@@ -382,5 +382,27 @@
     <h6 id="copyright-text">&copy; Copyright 2020 Ramen Place</h6>
   </div>
 </body>
+
+ <!-- Modal -->
+ <div class="modal fade" id="sent-message" tabindex="-1" role="dialog" aria-labelledby="sentMessageTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="sentMessageTitle">Thank You!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h6 class="align-middle">Your message has been sent. We will contact you shortly.</h6>
+        <h6 class="align-middle">Have a nice day.</h6>
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 </html>
